package.json fixed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "drum-machine",
   "version": "0.1.0",
-  "homepage": "https://avatarfreak.github.io/drum",
+  "homepage": "https://avatarfreak.github.io/Drum",
   "private": true,
   "dependencies": {
     "gh-pages": "^2.0.1",
